# tauri_yew_app

frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  blackout.html  tauri.conf.json
src-tauri/src/: main.rs
